# abbs-poc

./: .eslintrc.cjs  .gitignore  .pre-commit-config.yaml  README.md  db.sqlite3  index.html  jsconfig.json  manage.py  package-lock.json  package.json  pyproject.toml  sample.env  tailwind.config.js  vite.config.js
abbs/: asgi.py  settings.py  urls.py  wsgi.py
config/nginx/: nginx.conf
core/: admin.py  models.py  serializers.py  urls.py  viewsets.py
core/api/: serializers.py  urls.py  viewsets.py
core/migrations/: 0001_initial.py  0002_profile.py  0003_company_remove_profile_company_user_company_invoice_and_more.py  0004_invoice_paid.py  0005_alter_company_options_company_defaultrate_and_more.py
core/templates/: invoice.html
core/tests/: base.py  factories.py  test_invoices.py  test_user.py
dockerfiles/: docker-compose.dev.yml  docker-compose.yml
dockerfiles/abbs/: Dockerfile  Dockerfile.dockerignore  docker-compose.dev.yml  docker-compose.yml
dockerfiles/nginx/: Dockerfile  Dockerfile.dockerignore
frontend/: App.jsx  main.jsx
frontend/components/: Card.jsx  ClientSearch.jsx  Editable.jsx  ImageSelector.jsx  LayoutMain.jsx  PriceComponent.jsx  QuantityComponent.jsx  RemoveComponent.jsx  SideBar.jsx  Table.jsx
frontend/context/: BillContext.jsx
frontend/data/: customer.json
frontend/hooks/: AuthHook.js  useFetch.js  useLocalStorage.js
frontend/pages/: Customers.jsx  Dashboard.jsx  Home.jsx  Invoices.jsx  Login.jsx  NotFound.jsx  Signup.jsx
frontend/routes/: index.jsx
frontend/src/: index.css
src/: App.jsx  index.css  main.jsx
src/Components/: Card.jsx  CardComponent.jsx  ClientSearch.jsx  ClientSearchStyle.css  Editable.jsx  Table.jsx  (+14 more)
styles/: ImageUploaderStyle.css  Tooltip.css
(+57 files in other folders)
