[project]
name = "abbs_poc"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Brimrix", email = "ping@brimrix.com"},
]
dependencies = [
    "django>=5.0.6",
    "djangorestframework>=3.15.1",
    "django-vite>=3.0.4",
    "drf-spectacular>=0.27.2",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "CLP"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
test = [
    "factory-boy>=3.3.0",
]
dev = [
    "pre-commit>=3.7.1",
]
